--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,6 +1,8 @@
-@import 'reset.css';
+@import './reset.css';
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 1rem 2rem;
 }
+
+/* test 3 */
