oh the elegance!

--- a/src/components/ptc-button/ptc-button.scss
+++ b/src/components/ptc-button/ptc-button.scss
@@ -1,5 +1,5 @@
 :host{
-    background-color: var(--p-button--default__bgcolor, var(--p-cta__color-primary-idle, rgb(100, 149, 237)));
+    background-color: var(--p-button--default__bgcolor, var(--p-cta__color-primary-idle, rgb(94, 8, 128)));
     padding:0.5rem 1.25rem;
     color: var(--p-button--default__textcolor, var(--p-cta__color-secondary-idle, #fff));
     border-radius: var(
@@ -12,7 +12,7 @@
     :host(:hover){
         background-color: var(
             --p-button--hover__bgcolor, 
-            var(--p-cta__color-primary-hover, rgb(109 201 228))
+            var(--p-cta__color-primary-hover, rgb(144, 26, 190))
         );
     }
 }
