--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -3,6 +3,14 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 1rem 2rem;
+    font-size: 18px;
+}
+
+.side-by-side{
+    display:flex; justify-content: space-between; align-items: center; flex-wrap: wrap
+}
+.side-by-side > * {
+    margin-bottom: 1rem;;
 }
 
 /* test 3 */
