--- a/src/components/ptc-card/ptc-card.scss
+++ b/src/components/ptc-card/ptc-card.scss
@@ -2,7 +2,7 @@
 @import "../ptc/elevation";
 
 @mixin p($propertyName, $propertyState, $propertyValue){
-    @include prop(ptc-card, ptc-wrapper, $propertyName, $propertyState, $propertyValue);
+    @include prop(ptc-card, null, ptc-wrapper, $propertyName, $propertyState, $propertyValue);
 }
 
 :host {
@@ -12,5 +12,4 @@
     @include p(border-radius, idle, 0);
     @include p(padding, idle, 0);
     @include p(margin, idle, 0);
-    @include p(font-size, idle, 1.5rem);
 }
