--- a/src/components/ptc-content/ptc-content.scss
+++ b/src/components/ptc-content/ptc-content.scss
@@ -1,11 +1,11 @@
 @import "../ptc/ptc";
 
 @mixin p($propertyName, $propertyState, $propertyValue){
-    @include prop(ptc-card-content, null, ptc-container, $propertyName, $propertyState, $propertyValue);
+    @include prop(ptc-content, null, ptc-container, $propertyName, $propertyState, $propertyValue);
 }
 
 :host {
-    display:inline-block;
+    display:block;
     @include p(background-color, idle, transparent);
     @include p(text-color, idle, #333);
     @include p(padding, idle, 0.75rem);
