--- a/src/components/ptc-select/ptc-select.scss
+++ b/src/components/ptc-select/ptc-select.scss
@@ -1,19 +1,28 @@
+@import "../ptc/ptc";
+@import "../ptc/elevation";
+
+//prop($element, $variant, $generic, $propertyName, $propertyState, $propertyValue)
+
+@mixin p($propertyName, $propertyState, $propertyValue) {
+    @include prop(select, null, input, $propertyName, $propertyState, $propertyValue);
+}
+
 :host{
     display: inline-flex;
     outline: none;
 }
 .box{
-    background-color: var(--ptc-select__background-color--idle, var(--ptc-input__background-color--idle, #fff));
-    color: var(--ptc-select__color--idle, var(--ptc-input__color--idle, #404040));
-    padding: var(--ptc-select__padding--idle, var(--ptc-input__padding--idle, 0.5rem 0));
-    height: var(--ptc-select__height--idle, var(--ptc-input__height--idle, 2.125rem));
-    margin: var(--ptc-select__margin--idle, var(--ptc-input__margin--idle, 0));
-    font-weight: var(--ptc-select__font-weight--idle, var(--ptc-input__font-weight--idle, 400));
-    font-size: var(--ptc-select__font-size--idle, var(--ptc-input__font-size--idle, 1rem));
-    border-color: var(--ptc-select__border-color--idle, var(--ptc-input__border-color--idle, gray));
-    border-width: var(--ptc-select__border-width--idle, var(--ptc-input__border-width--idle, 1px));
-    border-style: var(--ptc-select__border-style--idle, var(--ptc-input__border-style--idle, solid));
-    border-radius: var(--ptc-select__border-radius--idle, var(--ptc-input__border-radius--idle, 0));
+    @include p(background-color, idle, $color-grayscale-max);
+    @include p(color, idle, $color-grayscale-25);
+    @include p(padding, idle, 0.5rem 0);
+    @include p(height, idle, 2.125rem);
+    @include p(margin, idle, 0);
+    @include p(font-weight, idle, 400);
+    @include p(font-size, idle, 1rem);
+    @include p(border-color, idle, $color-input-border-idle);
+    @include p(border-width, idle, $elements-input-border-width);
+    @include p(border-style, idle, $elements-input-border-style);
+    @include p(border-radius, idle, $border-radius);
     display: inline-block;
     position: relative;
     overflow: hidden;
@@ -42,7 +51,7 @@
     pointer-events: none;
 
     svg {
-        stroke: #1d697b;
+        @include prop(select-chevron, null, input-helper, stroke, idle, $color-cta-idle);
     }
 }
 
@@ -51,7 +60,8 @@
     margin-block-start: 34px;
     z-index: 9999;
     max-height: 300px;
-    background-color: #fff;
+    @include prop(select-dropdown, null, container, background-color, idle, $color-grayscale-max);
+    @include elevation-3();
     display: flex;
     flex-direction: column;
 
